          (http://www.packetfence.org/mantis/view.php?id=390)
        Removed unused loglevel from switches.conf
          (http://www.packetfence.org/mantis/view.php?id=392)
        Removed db connection parameters from switches.conf
          (http://www.packetfence.org/mantis/view.php?id=391)
        Removed DBI connect in pfsetvlan
          (http://www.packetfence.org/mantis/view.php?id=393)


1.7.3
        not all port security traps are handled
          (http://www.packetfence.org/mantis/view.php?id=363)
        require at least version 0.16 of Net::Pcap in SPEC
        web.pm still refers to parse_auth_conf
          (http://www.packetfence.org/mantis/view.php?id=365)
        reg scans and issues in trigger.pm
          (http://www.packetfence.org/mantis/view.php?id=367)
        reg scans and issues in release.cgi
          (http://www.packetfence.org/mantis/view.php?id=366)
        add trap community configuration parameter
          (http://www.packetfence.org/mantis/view.php?id=368)
        login error messages
          (http://www.packetfence.org/mantis/view.php?id=364)
        destination_url parameter lost during registration
          (http://www.packetfence.org/mantis/view.php?id=369)
        violation_add should be part of default 
          adjustswitchportvlan reasons
          (http://www.packetfence.org/mantis/view.php?id=370)
        recovery.pl uses obsolete getPhonesAtIfIndex
          (http://www.packetfence.org/mantis/view.php?id=372)
        recovery.pl and port security
          (http://www.packetfence.org/mantis/view.php?id=373)
        node_pid and registration status
          (http://www.packetfence.org/mantis/view.php?id=374)
        added support for Dlink::DES_3526 
          (contributed by Treker Chen)
        automatically hide scan section if necessary
          (http://www.packetfence.org/mantis/view.php?id=376)
        added support for HP::Procurve_2500
        correct getMacBridgePortHash for HP switches